--- a/Dockerfile-server
+++ b/Dockerfile-server
@@ -6,6 +6,10 @@ COPY ./server/package*.json ./
 
 RUN npm install
 
-COPY ./server .
+COPY ./server ./
+
+ENV NODE_ENV=production
+
+EXPOSE 8080
 
 CMD ["npm", "start"]
